# HMI-CAN-Read-Write-UI

./: .gitignore  Cargo.toml
expanders/: expander1.csv  expander10.csv  expander2.csv  expander3.csv  expander4.csv  expander5.csv  expander6.csv  expander7.csv  expander8.csv  expander9.csv
src/: Riki_j1939.dbc  Riki_j1939_old.dbc  dbc.rs  diagnostics.rs  main.rs
ui/: BatteryDisplay1.slint  BatteryDisplay2.slint  ClockDisplay.slint  DriveMode.slint  IndicatorDisplay.slint  PowerDisplay.slint  SpeedDisplay.slint  TripDisplay.slint  app-window.slint  appwindow.slint  hundreds.slint  hundredssmall.slint  outputs.slint  sevensegment.slint  smallsevensegment.slint  smallsevensegmentdot.slint  smallsevensegmentminus.slint
ui/covers/: arrow-cover.slint  batt-covers.slint  drive-mode-covers.slint  range-trip-odo-covers.slint  ready-cover.slint  regen-power-covers.slint  seven-segment-covers.slint  seven-segment-small-covers.slint  side-bar-cover.slint  time-calendar-temp-covers.slint  top-bar-cover.slint
