[package]
name = "Can-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canparse = "0.1.4"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.5"
slint = "1.14.1"
bitfield-struct = "0.11.0"

[build-dependencies]
slint-build = "1.14.1"



